Fix h4 spacing on user prefs

--- a/src/styles/pages/users/_preferences.scss
+++ b/src/styles/pages/users/_preferences.scss
@@ -1,6 +1,8 @@
 .page.users.preferences {
   h4 {
-    margin: 0 0 1.5rem 0;
+    &:not(.title) {
+      margin: 0 0 1.5rem 0;
+    }
   }
 
   .timezones {
